--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/frameLayout"
     android:layout_width="500dp"
-    android:layout_height="match_parent">
-
-    <View
-        android:id="@+id/resizeView"
-        android:layout_width="20dp"
-        android:layout_height="match_parent"
-        android:background="@android:color/darker_gray"
-        android:layout_gravity="end"
-        android:visibility="visible"/>
+    android:layout_height="500dp">
 
     <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
@@ -62,5 +56,20 @@
         </RelativeLayout>
 
     </androidx.drawerlayout.widget.DrawerLayout>
+
+    <ImageView
+        android:id="@+id/resizeView"
+        android:layout_width="58dp"
+        android:layout_height="42dp"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_resize_handle" />
+
+    <ImageView
+        android:id="@+id/dragView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="top|start"
+        android:src="@drawable/ic_drag_handle"
+        android:contentDescription="Drag Icon" />
 
 </FrameLayout>
