--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
-    android:layout_width="500dp"
+    android:layout_width="700dp"
     android:layout_height="500dp">
 
-    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,13 +16,28 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="false"
+                android:orientation="vertical">
+
+                <ListView
+                    android:id="@+id/markerList"
+                    android:layout_width="match_parent"
+                    android:layout_height="450dp" />
+            </LinearLayout>
+
             <org.osmdroid.views.MapView
                 android:id="@+id/mapView"
                 tilesource="Mapnik"
-                android:layout_width="match_parent"
+                android:layout_width="400dp"
                 android:layout_height="match_parent"
                 android:layout_above="@+id/buttonsLayout"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+
+            </org.osmdroid.views.MapView>
 
             <LinearLayout
                 android:id="@+id/buttonsLayout"
@@ -69,7 +84,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="top|start"
-        android:src="@drawable/ic_drag_handle"
-        android:contentDescription="Drag Icon" />
+        android:contentDescription="Drag Icon"
+        android:src="@drawable/ic_drag_handle" />
 
 </FrameLayout>
